--- a/examples/landmarks/at.html
+++ b/examples/landmarks/at.html
@@ -26,7 +26,7 @@
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
           <nav>
             <ul class="nav nav-pills nav-stacked">
-              <li class="active"><a href="index.html">Principles</a></li>
+              <li><a href="index.html">Principles</a></li>
               <li><a href="HTML5.html">HTML5</a></li>
               <li><a href="banner.html">Banner</a></li>
               <li><a href="complementary.html">Complementary</a></li>
@@ -36,7 +36,7 @@
               <li><a href="navigation.html">Navigation</a></li>
               <li><a href="region.html">Region</a></li>
               <li><a href="search.html">Search</a></li>
-              <li><a href="at.html" aria-label="Assistive Technology" aria-current="page">Asst. Tech.</a></li>
+              <li class="active"><a href="at.html" aria-label="Assistive Technology" aria-current="page">Asst. Tech.</a></li>
               <li><a href="resources.html">Resources</a></li>
             </ul>
           </nav>
