--- a/examples/landmarks/navigation.html
+++ b/examples/landmarks/navigation.html
@@ -26,7 +26,7 @@
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
           <nav>
             <ul class="nav nav-pills nav-stacked">
-              <li><a href="index.html">Design Patterns</a></li>
+              <li><a href="index.html">Principles</a></li>
               <li><a href="HTML5.html">HTML5</a></li>
               <li><a href="banner.html">Banner</a></li>
               <li><a href="complementary.html">Complementary</a></li>
