--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1066,76 +1066,100 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
         <p class="note">
-          Significant revisions to this keyboard subsection were made on October 31. 
+          Significant revisions to this keyboard subsection were made on November 12. 
+          This is the second of two approaches being considered for describing keyboard behavior for menubars and menus.
+          The first approach is in master and may be viewed in <a href="https://rawgit.com/w3c/aria-practices/master/aria-practices.html#menu">RawGit</a>.
           Please provide feedback in <a href="https://github.com/w3c/aria-practices/issues/120">issue 120</a>.
         </p>
+        <p>
+          The following description of keyboard behaviors assumes:</p>
+          <ol>
+            <li>A horizontal <code>menubar</code> containing several <code>menuitem</code> elements.</li>
+            <li>All items in the <code>menubar</code> have child submenus that contain multiple vertically arranged items.</li> 
+            <li>Some of the <code>menuitem</code> elements in the submenus have child submenus with items that are also vertically arranged.</li>
+          </ol>
+          <p>When reading the following descriptions, also keep in mind that:</p>
+          <ol>
+            <li>Focusable elements, which may have role <code>menuitem</code>, <code>menuitemradio</code>, or <code>menuitemcheckbox</code>, are referred to as items.</li>
+            <li>If a behavior applies to only certain types of items, e.g., <code>menuitem</code> elements, the specific role name is used.</li>
+            <li>Submenus, also known as pop-up menus,  are elements with role <code>menu</code>.</li>
+            <li>Except where noted, menus opened from a menubutton behave the same as menus opened from a menubar.</li>
+          </ol>
         <ul>
           <li>
             When a <code>menu</code> opens, or when a <code>menubar</code> receives focus, 
-            keyboard focus is placed on the first <code>menuitem</code>.
-            All <code>menuitems</code> in a menu are focusable as described in <a href="#kbd_general_within"></a>.
+            keyboard focus is placed on the first item.
+            All items are focusable as described in <a href="#kbd_general_within"></a>.
           </li>
           <li><kbd>Enter</kbd>: 
             <ul>
-              <li>If the focused <code>menuitem</code> has a submenu, opens the submenu and places focus on its first <code>menuitem</code>.</li>
-              <li>Otherwise, activates the focused <code>menuitem</code>, <code>menuitemcheckbox</code>, or <code>menuitemradio</code> and closes the menu.</li>
+              <li>When focus is on a <code>menuitem</code> that has a submenu, opens the submenu and places focus on its first item.</li>
+              <li>Otherwise, activates the item and closes the menu.</li>
             </ul>
           </li>
           <li><kbd>Space</kbd>: 
             <ul>
-              <li>If focus is on a <code>menuitemcheckbox</code>, changes the state without closing the menu.</li>
-              <li>If focus is on a <code>menuitemradio</code> that is not checked, without closing the menu, checks the focused <code>menuitemradio</code> and unchecks any other checked <code>menuitemradio</code> element in the same group.</li>
-              <li>(Optional): If the focused <code>menuitem</code> has a submenu, opens the submenu and places focus on its first <code>menuitem</code>.</li>
-              <li>(Optional): Activates the focused <code>menuitem</code> and closes the menu.</li>
+              <li>When focus is on a <code>menuitemcheckbox</code>, changes the state without closing the menu.</li>
+              <li>When focus is on a <code>menuitemradio</code> that is not checked, without closing the menu, checks the focused <code>menuitemradio</code> and unchecks any other checked <code>menuitemradio</code> element in the same group.</li>
+              <li>(Optional): When focus is on a <code>menuitem</code> that has a submenu, opens the submenu and places focus on its first item.</li>
+              <li>(Optional): When focus is on a <code>menuitem</code> that does not have a submenu, activates the <code>menuitem</code> and closes the menu.</li>
             </ul>
           </li>
           <li><kbd>Down Arrow</kbd>:
             <ul> 
-            <li>If the focused <code>menuitem</code> is in a vertical menu, moves focus to the next <code>menuitem</code>, optionally wrapping from the last to the first. </li>
-              <li>If the focused <code>menuitem</code> is in a horizontal menubar or menu and the <code>menuitem</code> has a submenu, opens the submenu and places focus on its first <code>menuitem</code>.</li>
-              <li>Otherwise, if the focused <code>menuitem</code> is in a horizontal submenu of a parent vertical menubar, closes the submenu and moves focus to the first <code>menuitem</code> contained in the submenu opened by the next <code>menuitem</code> in the parent menubar. </li>
+              <li>When focus is on a <code>menuitem</code> in a <code>menubar</code>, opens its submenu and places focus on the first item in the submenu.</li>
+            <li>When focus is in a <code>menu</code>, moves focus to the next item, optionally wrapping from the last to the first.</li>
             </ul>
           </li>
           <li><kbd>Up Arrow</kbd>:
             <ul> 
-            <li>If the focused <code>menuitem</code> is in a vertical menu, moves focus to the previous <code>menuitem</code>, optionally wrapping from the first to the last. </li>
-            <li>If the focused <code>menuitem</code> is in a horizontal submenu of a parent horizontal menu, closes the submenu and returns focus to the <code>menuitem</code> in the parent menu that opened the submenu. </li>
-            <li>Otherwise, if the focused <code>menuitem</code> is in a horizontal submenu of a parent vertical menubar, moves focus to the first <code>menuitem</code> contained in the submenu opened by the previous <code>menuitem</code> in the parent menubar. </li>
+            <li>When focus is in a <code>menu</code>, moves focus to the previous item, optionally wrapping from the first to the last.</li>
+            <li>When focus is in a <code>menubar</code>, does nothing.</li>
             </ul>
           </li>
           <li><kbd>Right Arrow</kbd>: 
             <ul>
-            <li>If the focused <code>menuitem</code> is in a horizontal menu, moves focus to the next <code>menuitem</code>, optionally wrapping from the last to the first. </li>
-              <li>If the focused <code>menuitem</code> is in a vertical menu and the <code>menuitem</code> has a submenu, opens the submenu and places focus on its first <code>menuitem</code>. </li>
-              <li>Otherwise, if the focused <code>menuitem</code> is in a vertical submenu of a parent horizontal menubar, closes the submenu and moves focus to the first <code>menuitem</code> contained in the submenu opened by the next <code>menuitem</code> in the parent menubar.</li>
+            <li>When focus is in a <code>menubar</code>, moves focus to the next item, optionally wrapping from the last to the first.</li>
+              <li>When focus is in a <code>menu</code> and on a <code>menuitem</code> that has a submenu, opens the submenu and places focus on its first item.</li>
+              <li>
+                When focus is in a <code>menu</code> and on an item that does not have a submenu, closes the menu and any parent menus, opens the submenu of the next item in the <code>menubar</code>, and moves focus to that item in the <code>menubar</code>. 
+                Note that if the <code>menubar</code> was not present, e.g., the menus were opened from a menubutton, <kbd>Right Arrow</kbd> would not do anything when focus is on an item that does not have a submenu.
+              </li>
             </ul>
           </li>
           <li><kbd>Left Arrow</kbd>:
-          <ul>
-            <li>If the focused <code>menuitem</code> is in a horizontal menu, moves focus to the previous <code>menuitem</code>, optionally wrapping from the first to the last. </li>
-              <li>If the focused <code>menuitem</code> is in a vertical submenu of a parent vertical menu, closes the submenu and returns focus to the <code>menuitem</code> that opened the submenu.</li>
-              <li>Otherwise, if the focused <code>menuitem</code> is in a vertical submenu of a parent horizontal menubar, closes the submenu and moves focus to the first <code>menuitem</code> contained in the submenu opened by the previous <code>menuitem</code> in the parent menubar.</li>
+            <ul>
+              <li>When focus is in a <code>menubar</code>, moves focus to the previous item, optionally wrapping from the last to the first.</li>
+              <li>When focus is in a submenu of an item in a <code>menu</code>, closes the submenu and returns focus to the parent <code>menuitem</code>.</li>
+              <li>When focus is in a submenu of an item in a <code>menubar</code>, closes the submenu, opens the submenu of the previous item in the <code>menubar</code>, and moves focus to the parent <code>menuitem</code> in the <code>menubar</code>.</li>
             </ul>
           </li>
-          <li><kbd>Home</kbd>: If arrow key wrapping is not supported, moves focus to the first <code>menuitem</code> in the menu that contains focus.</li>
-          <li><kbd>End</kbd>: If arrow key wrapping is not supported, moves focus to the last <code>menuitem</code> in the menu that contains focus.</li>
+          <li><kbd>Home</kbd>: If arrow key wrapping is not supported, moves focus to the first item in the current <code>menu</code> or <code>menubar</code>.</li>
+          <li><kbd>End</kbd>: If arrow key wrapping is not supported, moves focus to the last item in the current <code>menu</code> or <code>menubar</code>.</li>
           <li>Any key that corresponds to a printable character (Optional): Move focus to   the next menu item in the current menu whose label begins with that printable character.</li>
           <li><kbd>Escape</kbd>: Close the menu that contains focus and return focus to   the element or context, e.g., menu button or parent <code>menuitem</code>, from which the menu was opened. </li>
-          <li><kbd>Tab</kbd>: Moves focus to the next element in the tab sequence, and if the <code>menuitem</code> that had focus is not in a menubar, closes its menu and all open parent menus.</li>
-          <li><kbd>Shift + Tab</kbd>: Moves focus to the previous element in the tab sequence, and if the <code>menuitem</code> that had focus is not in a menubar, closes its menu and all open parent menus.</li>
+          <li><kbd>Tab</kbd>: Moves focus to the next element in the tab sequence, and if the item that had focus is not in a <code>menubar</code>, closes its <code>menu</code> and all open parent <code>menu</code> containers.</li>
+          <li><kbd>Shift + Tab</kbd>: Moves focus to the previous element in the tab sequence, and if the item that had focus is not in a <code>menubar</code>, closes its <code>menu</code> and all open parent <code>menu</code> containers.</li>
         </ul>
         <ol class="note">
-          <li>Disabled menu items should be focusable but can not be activated. </li>
+          <li>Disabled menu items are focusable but can not be activated. </li>
           <li>A <a href="#separator" class="role-reference">separator</a> in a menu is not focusable or interactive.</li>
           <li>
             If a menu is opened or a menubar receives focus as a result of a context action, <kbd>Escape</kbd> or <kbd>Enter</kbd> may return focus to   the invoking context. 
             For example, a rich text editor may have a menubar that receives focus when a shortcut key, e.g., <kbd>alt + F10</kbd>, is pressed while editing. 
-            In this case, <kbd>Escape</kbd> or activating a command from the menu may return focus to the editor.
+            In this case, pressing <kbd>Escape</kbd> or activating a command from the menu may return focus to the editor.
           </li>
           <li>
             Although it is recommended that authors avoid doing so, some implementations of navigation menubars may have <code>menuitem</code> elements that both perform a function and open a submenu.
             In such implementations, <kbd>enter</kbd> and <kbd>Space</kbd> perform a navigation function, e.g., load new content,
             while <kbd>Down Arrow</kbd>, in a horizontal menubar, opens the submenu associated with that same <code>menuitem</code>.
+          </li>
+          <li>
+            When items in a <code>menubar</code> are arranged vertically and items in <code>menu</code> containers are arranged horizontally:
+            <ol>
+              <li><kbd>Down Arrow</kbd> performs as <kbd>Right Arrow</kbd> is described above, and vice versa.</li>
+              <li><kbd>Up Arrow</kbd> performs as <kbd>Left Arrow</kbd> is described above, and vice versa.</li>
+            </ol>
           </li>
         </ol>
       </section>
