--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -138,7 +138,8 @@
 
       <h3 id="id_kbd">Keyboard Support</h2>
 
-      <table aria-labelledby="id_kbd id_mbf"> 
+      <table aria-labelledby="id_kbd id_mbf">
+
         <thead>
           <tr>
             <th>Key</th>
@@ -160,6 +161,8 @@
               <ul>
                 <li>Moves focus to previous menubar menu item.</li>
                 <li>If focus on first menubar menu item, focus is moved to last menubar menu item.</li>
+                <li>Popup menu for the menubar menu item that is losing focus is closed (e.g. if it happened to be open).</li>
+                <li>Popup menu for the new menubar menu item with focus is open if the popup menu for the menubar menu item losing focus was open, otehrwise it is closed.</li> 
               </ul>  
             </td>
           </tr>
@@ -169,6 +172,8 @@
               <ul>
                 <li>Moves focus to next menubar menu item.</li>
                 <li>If focus on last menubar menu item, focus is moved to first menubar menu item.</li>
+                <li>Popup menu for the menubar menu item that is losing focus is closed (e.g. if it happened to be open).</li>
+                <li>Popup menu for the new menubar menu item with focus is open if the popup menu for the menubar menu item losing focus was open, otehrwise it is closed.</li> 
               </ul>  
             </td>
           </tr>
@@ -178,6 +183,8 @@
               <ul>
                 <li>Open popup menu.</li>
                 <li>Moves focus to first popup menu item.</li>
+                <li>Popup menu for the menubar menu item that is losing focus is closed (e.g. if it happened to be open).</li>
+                <li>Popup menu for the new menubar menu item with focus is open if the popup menu for the menubar menu item losing focus was open, otehrwise it is closed.</li> 
               </ul>  
             </td>
           </tr>
@@ -187,6 +194,8 @@
               <ul>
                 <li>Open popup menu.</li>
                 <li>Moves focus to last popup menu item.</li>
+                <li>Popup menu for the menubar menu item that is losing focus is closed (e.g. if it happened to be open).</li>
+                <li>Popup menu for the new menubar menu item with focus is open if the popup menu for the menubar menu item losing focus was open, otehrwise it is closed.</li> 
               </ul>  
             </td>
           </tr>
@@ -195,6 +204,8 @@
             <td>
               <ul>
                 <li>Moves focus to first menubar menu item.</li>
+                <li>Popup menu for the menubar menu item that is losing focus is closed (e.g. if it happened to be open).</li>
+                <li>Popup menu for the new menubar menu item with focus is open if the popup menu for the menubar menu item losing focus was open, otehrwise it is closed.</li> 
               </ul>  
             </td>
           </tr>
@@ -203,6 +214,8 @@
             <td>
               <ul>
                 <li>Moves focus to last menubar menu item.</li>
+                <li>Popup menu for the menubar menu item that is losing focus is closed (e.g. if it happened to be open).</li>
+                <li>Popup menu for the new menubar menu item with focus is open if the popup menu for the menubar menu item losing focus was open, otehrwise it is closed.</li> 
               </ul>  
             </td>
           </tr>
@@ -211,19 +224,23 @@
             <td><ul>
                 <li>Moves focus to next menubar item that starts with that letter.</li>
                 <li>If no menubar menu item starts with the letter, focus does not move.</li>
+                <li>Popup menu for the menubar menu item that is losing focus is closed (e.g. if it happened to be open).</li>
+                <li>Popup menu for the new menubar menu item with focus is open if the popup menu for the menubar menu item losing focus was open, otehrwise it is closed.</li> 
               </ul>  
             </td>
           </tr>
         </tbody>
       </table>
 
-      <h3 id="id_mb_roles">ARIA Roles</h3>
+      <h3 id="id_mb_roles">Role, Property, State, and Tabindex Attributes</h3>
 
       <table aria-labelledby="id_mb_roles"> 
         <thead>
           <tr>
             <th>Role</th>
             <th>Tabindex</th>
+            <th>Accessible Name</th>
+            <th>Properties and States</th>
             <th>Usage</th>
           </tr>
         </thead>
@@ -236,8 +253,14 @@
             none
            </td>
            <td>
+            <code>aria-label</code> attribute
+           </td>
+           <td>
+             none
+           </td>
+           <td>
             <ul>
-              <li>Identifies the containter element, <code>menubar</code> for the <code>menuitem</code>.</li>
+              <li>Identifies a list of popup menus.</li>
             </ul>  
            </td>
          </tr>  
@@ -246,51 +269,28 @@
               <code>menuitem</code>
            </td>   
            <td>
-            0 
+            <ul>
+              <li>0: when the <code>menuitem</code> has keyboard focus.</li>
+              <li>-1: When the <code>menuitem</code> does <strong>not</strong> have keyboard focus.</li>
+            </ul>
+           </td>
+           <td>
+            Child text content of the <code>a</code> element.
+           </td>
+           <td>
+             <ul>
+              <li><code>aria-haspopup="true"</code>: identifies the <code>menuitem</code> as a having a popup menu.
+              <li><code>aria-expanded="false"</code>: popup menu is closed.
+              <li><code>aria-expanded="true"</code>: popup menu is open.
+             </ul>
            </td>
            <td>
             <ul>
-              <li>Used for <code>menuitem</code>, so called parent menu items, contained in the menu bar role, <code>menubar</code></li>
+              <li>Is used for opening and closing a popup menu (e.g. Admissions).</li>
+              <li>Cannot have any other action other than opening or closing popup menu (e.g. can not also be a link).</li>
             </ul>  
            </td>
          </tr>    
-        </tbody>
-     </table>   
-
-
-      <h3 id="id_mb_property">ARIA Property and States</h3>
-      <table aria-labelledby="id_mb_property"> 
-      <thead>
-          <tr>
-            <th>Property</th>
-            <th>States</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <code>aria-label</code>
-           </td>   
-           <td>
-           used to define <code>ul</code> element to lable menubar
-           </td>
-         </tr> 
-         <tr>
-            <td>
-              <code>aria-haspopup</code>
-           </td>   
-           <td>
-           True or False 
-           </td>
-         </tr> 
-         <tr>
-            <td>
-              <code>aria-expanded</code>
-           </td>   
-           <td>
-            True or False 
-           </td>
-         </tr>      
         </tbody>
      </table>   
 
@@ -310,7 +310,7 @@
             <td>
               <ul>
                 <li>Follow link.</li>
-                <li>NOTE: In this example all the links are all internal and therefore not leave the page.</li>
+                <li>NOTE: In this example all the links go to dummy pages, use back key to return to the page with the menubar.</li>
               </ul>  
             </td>
           </tr>
@@ -329,6 +329,7 @@
               <ul>
                 <li>Closes popup menu.</li>
                 <li>Moves focus to previous menubar menu item.</li>
+                <li>Open the popup menu of the previous menubar menuitem with focus.</li>
               </ul>  
             </td>
           </tr>
@@ -338,6 +339,7 @@
               <ul>
                 <li>Closes popup menu.</li>
                 <li>Moves focus to next menubar menu item.</li>
+                <li>Open the popup menu of the next menubar menuitem with focus.</li>
               </ul>  
             </td>
           </tr>
@@ -347,6 +349,7 @@
               <ul>
                 <li>Moves focus to previous popup menu item.</li>
                 <li>If first popup menu item, focus is moved to the last popup menu item.</li>
+                <li>Open the popup menu of the previous menubar menuitem with focus.</li>
               </ul>  
             </td>
           </tr>
@@ -356,6 +359,7 @@
               <ul>
                 <li>Moves focus to next popup menu item.</li>
                 <li>If last popup menu item, focus is moved to the first popup menu item.</li>
+                <li>Open the popup menu of the next menubar menuitem with focus.</li>
               </ul>  
             </td>
           </tr>
