--- a/examples/accordion/accordion1.html
+++ b/examples/accordion/accordion1.html
@@ -5,9 +5,11 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 <title>Accordion Example | WAI-ARIA Authoring Practices 1.1</title>
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
-<link href="../css/core.css" rel="stylesheet">
-<link href="../css/table.css" rel="stylesheet">
-<script src="../js/examples.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+<link rel="stylesheet" href="../css/core.css">
+<script src="../js/examples.js"></script>
+<script src="../js/highlight.pack.js"></script>
+<script src="../js/app.js"></script>
 
 <!--  js and css for this example. -->
 <link rel="stylesheet" type="text/css" href="css/customize.css" />
@@ -146,7 +148,7 @@
   </section>
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <table aria-labelledby="kbd_label">
+    <table aria-labelledby="kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -155,7 +157,7 @@
       </thead>
       <tbody>
         <tr>
-          <td><kbd>Space</kbd> or <kbd>Enter</kbd></td>
+          <th><kbd>Space</kbd> or <kbd>Enter</kbd></th>
           <td>When focus is on the accordion header of a collapsed section, expands the section.</td>
         </tr>
       </tbody>
@@ -167,7 +169,7 @@
     <!--
       Update this table to describe how roles, properties, states, and tabindex are used in this example.
     -->
-    <table aria-labelledby="rps_label">
+    <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
           <th scope="col">Role</th>
@@ -286,12 +288,12 @@
   <section>
     <h2 id="sc1_label">HTML Source Code</h2>
     <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-    <div id="sc1"></div>
+    <pre><code id="sc1"></code></pre>
     <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
     <script>
-            sourceCode.add('sc1', 'coding-arena')
-            sourceCode.make()
-        </script>
+      sourceCode.add('sc1', 'coding-arena');
+      sourceCode.make();
+    </script>
   </section>
 
   </main>
