--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -3,9 +3,14 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>Navigation Menubar Example | WAI-ARIA Authoring Practices 1.1</title>
-<link href="../../css/core.css" rel="stylesheet">
-<link href="../../css/table.css" rel="stylesheet">
-<script src="../../js/examples.js" type="text/javascript"></script>
+
+<!--  Core js and css shared by all examples; do not modify when using this template. -->
+<link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+<link rel="stylesheet" href="../../css/core.css">
+<script src="../../js/examples.js"></script>
+<script src="../../js/highlight.pack.js"></script>
+<script src="../../js/app.js"></script>
+
 <script src="js/MenubarLinks.js" type="text/javascript"></script>
 <script src="js/MenubarItemLinks.js" type="text/javascript"></script>
 <script src="js/PopupMenuLinks.js" type="text/javascript"></script>
@@ -244,7 +249,7 @@
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
     <h3 id="kbd1_label">Menubar</h3>
-    <table aria-labelledby="kbd1_label kbd_label">
+    <table aria-labelledby="kbd1_label kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -253,9 +258,9 @@
       </thead>
       <tbody>
         <tr>
-          <td>
+          <th>
             <kbd>Space or Enter</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Open or Close popup menu (e.g. toggle).</li>
@@ -263,9 +268,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Left Arrow</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Moves focus to previous menubar menu item.</li>
@@ -275,9 +280,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Right Arrow</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Moves focus to next menubar menu item.</li>
@@ -287,9 +292,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Down Arrow</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Open popup menu.</li>
@@ -298,9 +303,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Up Arrow </kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Open popup menu.</li>
@@ -309,9 +314,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Home</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Moves focus to first menubar menu item.</li>
@@ -319,9 +324,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>End</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Moves focus to last menubar menu item.</li>
@@ -329,9 +334,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Character</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Moves focus to next menubar item that starts with that letter.</li>
@@ -343,7 +348,7 @@
     </table>
 
     <h3 id="kbd2_label">Popup Menu</h3>
-    <table aria-labelledby="kbd2_label kbd_label">
+    <table aria-labelledby="kbd2_label kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -352,9 +357,9 @@
       </thead>
       <tbody>
         <tr>
-          <td>
+          <th>
             <kbd>Space or Enter</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Follow link.</li>
@@ -364,9 +369,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Escape</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Closes popup menu.</li>
@@ -375,9 +380,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Left Arrow</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Closes popup menu.</li>
@@ -387,9 +392,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Right Arrow</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Closes popup menu.</li>
@@ -399,9 +404,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Up Arrow</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Moves focus to previous popup menu item.</li>
@@ -410,9 +415,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Down Arrow</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Moves focus to next popup menu item.</li>
@@ -421,9 +426,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Home</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Moves focus to first popup menu item.</li>
@@ -431,9 +436,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>End</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Moves focus to last popup menu item.</li>
@@ -441,9 +446,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <kbd>Character</kbd>
-          </td>
+          </th>
           <td>
             <ul>
               <li>Moves focus to the next popup item that starts with that letter.</li>
@@ -459,7 +464,7 @@
     <h2 id="rps_label">Role, Property, State, and Tabindex Attributes</h2>
     <h3 id="rps1_label">Menubar</h3>
 
-    <table aria-labelledby="rps1_label rps_label">
+    <table aria-labelledby="rps1_label rps_label" class="data attributes">
       <thead>
         <tr>
           <th>Role</th>
@@ -470,9 +475,9 @@
       </thead>
       <tbody>
         <tr>
-          <td>
+          <th>
             <code>menubar</code>
-          </td>
+          </th>
           <td></td>
           <td>
             <code>ul</code>
@@ -492,10 +497,10 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <th>
             <code>aria-label=&quot;<em>string</em>&quot;
             </code>
-          </td>
+          </th>
           <td>
             <code>ul</code>
           </td>
@@ -508,9 +513,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <code>menuitem</code>
-          </td>
+          </th>
           <td></td>
           <td>
             <code>a</code>
@@ -527,9 +532,9 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <th>
             <code>tabindex=&quot;-1&quot;</code>
-          </td>
+          </th>
           <td>
             <code>a</code>
           </td>
@@ -544,9 +549,9 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <th>
             <code>tabindex=&quot;0&quot;</code>
-          </td>
+          </th>
           <td>
             <code>a</code>
           </td>
@@ -573,9 +578,9 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <th>
             <code>aria-haspopup=&quot;true&quot;</code>
-          </td>
+          </th>
           <td>
             <code>a</code>
           </td>
@@ -588,9 +593,9 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <th>
             <code>aria-expanded=&quot;true&quot;</code>
-          </td>
+          </th>
           <td>
             <code>a</code>
           </td>
@@ -602,9 +607,9 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <th>
             <code>aria-expanded=&quot;false&quot;</code>
-          </td>
+          </th>
           <td>
             <code>a</code>
           </td>
@@ -615,9 +620,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <code>none</code>
-          </td>
+          </th>
           <td></td>
           <td>
             <code>li</code>
@@ -633,7 +638,7 @@
     </table>
 
     <h3 id="rps2_label">Popup Menu</h3>
-    <table aria-labelledby="rps2_label rps_label">
+    <table aria-labelledby="rps2_label rps_label" class="data attributes">
       <thead>
         <tr>
           <th>Role</th>
@@ -644,9 +649,9 @@
       </thead>
       <tbody>
         <tr>
-          <td>
+          <th>
             <code>menu</code>
-          </td>
+          </th>
           <td></td>
           <td>
             <code>ul</code>
@@ -666,10 +671,10 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <th>
             <code>aria-label=&quot;<em>string</em>&quot;
             </code>
-          </td>
+          </th>
           <td>
             <code>ul</code>
           </td>
@@ -682,9 +687,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <code>menuitem</code>
-          </td>
+          </th>
           <td></td>
           <td>
             <code>a</code>
@@ -701,9 +706,9 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <th>
             <code>tabindex=&quot;-1&quot;</code>
-          </td>
+          </th>
           <td>
             <code>a</code>
           </td>
@@ -718,9 +723,9 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <th>
             <code>aria-haspopup=&quot;true&quot;</code>
-          </td>
+          </th>
           <td>
             <code>a</code>
           </td>
@@ -733,9 +738,9 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <th>
             <code>aria-expanded=&quot;true&quot;</code>
-          </td>
+          </th>
           <td>
             <code>a</code>
           </td>
@@ -747,9 +752,9 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <th>
             <code>aria-expanded=&quot;false&quot;</code>
-          </td>
+          </th>
           <td>
             <code>a</code>
           </td>
@@ -760,9 +765,9 @@
           </td>
         </tr>
         <tr>
-          <td>
+          <th>
             <code>none</code>
-          </td>
+          </th>
           <td></td>
           <td>
             <code>li</code>
@@ -804,14 +809,14 @@
     <h2>HTML Source Code</h2>
     <h3 id="sc1_label">Example 1: Menubar With ARIA Markup in the HTML Source</h3>
     <div id="sc1_start_sep" role="separator" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of HTML for" ></div>
-    <div id="sc1"></div>
+    <pre><code id="sc1"></code></pre>
     <div id="sc1_end_sep" role="separator" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of HTML for" ></div>
     <script>
             sourceCode.add('sc1', 'ex1')
             </script>
     <h3 id="sc2_label">Example 2: ARIA markup added dynamically</h3>
     <div id="sc2_start_sep" role="separator" aria-labelledby="sc2_start_sep sc2_label" aria-label="Start of HTML for" ></div>
-    <div id="sc2"></div>
+    <pre><code id="sc2"></code></pre>
     <div id="sc2_end_sep" role="separator" aria-labelledby="sc2_end_sep sc2_label" aria-label="End of HTML for" ></div>
     <script>
             sourceCode.add('sc2', 'ex2')
