--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -44,6 +44,7 @@
                   <div id="idRedValue"
                        role="slider"
                        class="thumb"
+                       tabindex="0" 
                        aria-valuemin="0"
                        aria-valuenow="0"
                        aria-valuemax="255"
@@ -58,6 +59,7 @@
                   <div id="idGreenValue"
                        role="slider"
                        class="thumb"
+                       tabindex="0" 
                        aria-valuemin="0"
                        aria-valuenow="0"
                        aria-valuemax="255"
@@ -72,6 +74,7 @@
                   <div id="idBlueValue"
                        role="slider"
                        class="thumb"
+                       tabindex="0" 
                        aria-valuemin="0"
                        aria-valuenow="0"
                        aria-valuemax="255"
